// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulation regression (10 diverse scenarios) > 01-historisch-2025 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 11087.7,
    "curtailmentGW": 0,
    "exportGW": 11.051,
    "h2SocGWh": 0,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 53.025,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 12731.99,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 4.981,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 50.332,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 15460.64,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 0.951,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 49.018,
  },
  "summary": {
    "co2GperKWh": 346.55,
    "co2MtPerYear": 161.431,
    "curtailmentTWh": 0,
    "exportTWh": 12.163,
    "hoursWithLoadShedding": 0,
    "importTWh": 34.117,
    "loadSheddingTWh": 0,
    "peakLoadGW": 75.64,
    "renewableSharePct": 56.67,
    "renewableTWh": 263.966,
    "securityStatus": "stabil",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 02-default-custom 1`] = `
{
  "hour0": {
    "batterieSocGWh": 3.496,
    "co2Tph": 8791.64,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 4.37,
    "storageDischargeGW": 0,
    "supplyGW": 52.112,
  },
  "hour4000": {
    "batterieSocGWh": 4.556,
    "co2Tph": 9263.54,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 0,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 7.116,
    "supplyGW": 49.641,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 11444.2,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 9.234,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 41.132,
  },
  "summary": {
    "co2GperKWh": 306.43,
    "co2MtPerYear": 142.74,
    "curtailmentTWh": 0,
    "exportTWh": 4.092,
    "hoursWithLoadShedding": 0,
    "importTWh": 74.923,
    "loadSheddingTWh": 0,
    "peakLoadGW": 75.64,
    "renewableSharePct": 58.76,
    "renewableTWh": 273.716,
    "securityStatus": "stabil",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 03-vollelektrifizierung 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 53800.17,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 219.736,
    "loadSheddingGW": 101.952,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 104.784,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 54272.08,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 236.213,
    "loadSheddingGW": 120.899,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 102.313,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 53682.55,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 259.198,
    "loadSheddingGW": 152.394,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 93.804,
  },
  "summary": {
    "co2GperKWh": 229.58,
    "co2MtPerYear": 471.315,
    "curtailmentTWh": 0,
    "exportTWh": 0,
    "hoursWithLoadShedding": 8760,
    "importTWh": 113.88,
    "loadSheddingTWh": 1141.055,
    "peakLoadGW": 330.38,
    "renewableSharePct": 13.33,
    "renewableTWh": 273.716,
    "securityStatus": "kritisch",
    "totalDemandTWh": 2052.937,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 04-100ee-no-import-style 1`] = `
{
  "hour0": {
    "batterieSocGWh": 300,
    "co2Tph": 1835.37,
    "curtailmentGW": 121.142,
    "exportGW": 25,
    "h2SocGWh": 50000,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 72.742,
  },
  "hour4000": {
    "batterieSocGWh": 300,
    "co2Tph": 3427.77,
    "curtailmentGW": 53.739,
    "exportGW": 25,
    "h2SocGWh": 50000,
    "importGW": 0,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 81.757,
  },
  "hour8000": {
    "batterieSocGWh": 300,
    "co2Tph": 1943,
    "curtailmentGW": 61.949,
    "exportGW": 25,
    "h2SocGWh": 50000,
    "importGW": 0,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 75.366,
  },
  "summary": {
    "co2GperKWh": 42.87,
    "co2MtPerYear": 19.972,
    "curtailmentTWh": 327.929,
    "exportTWh": 142.11,
    "hoursWithLoadShedding": 4,
    "importTWh": 0,
    "loadSheddingTWh": 0.015,
    "peakLoadGW": 75.64,
    "renewableSharePct": 135.77,
    "renewableTWh": 632.453,
    "securityStatus": "angespannt",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 05-windon-dominant-with-battery 1`] = `
{
  "hour0": {
    "batterieSocGWh": 40,
    "co2Tph": 2214.94,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 3.358,
    "storageChargeGW": 54.198,
    "storageDischargeGW": 0,
    "supplyGW": 101.94,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 5287.15,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 56.757,
    "loadSheddingGW": 5.494,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 38.264,
  },
  "hour8000": {
    "batterieSocGWh": 250,
    "co2Tph": 1819.59,
    "curtailmentGW": 0,
    "exportGW": 21.162,
    "h2SocGWh": 0.1,
    "importGW": 0,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 71.528,
  },
  "summary": {
    "co2GperKWh": 60.27,
    "co2MtPerYear": 28.077,
    "curtailmentTWh": 19.647,
    "exportTWh": 34.52,
    "hoursWithLoadShedding": 3476,
    "importTWh": 50.619,
    "loadSheddingTWh": 62.519,
    "peakLoadGW": 75.64,
    "renewableSharePct": 84.17,
    "renewableTWh": 392.082,
    "securityStatus": "kritisch",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 06-windoff-with-huge-h2 1`] = `
{
  "hour0": {
    "batterieSocGWh": 6.15,
    "co2Tph": 1581.57,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 0,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 5.477,
    "storageDischargeGW": 0,
    "supplyGW": 53.219,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 5079.27,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 56.757,
    "loadSheddingGW": 21.485,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 22.272,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 4967.49,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 11.927,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 38.439,
  },
  "summary": {
    "co2GperKWh": 87.57,
    "co2MtPerYear": 40.791,
    "curtailmentTWh": 0,
    "exportTWh": 0,
    "hoursWithLoadShedding": 7079,
    "importTWh": 99.943,
    "loadSheddingTWh": 134.712,
    "peakLoadGW": 75.64,
    "renewableSharePct": 49.77,
    "renewableTWh": 231.834,
    "securityStatus": "kritisch",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 07-kohle-phaseout 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 2626.03,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 1.21,
    "loadGW": 47.742,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 46.532,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 6543.81,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 12.696,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 44.061,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 6941.51,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 50.365,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 37.365,
  },
  "summary": {
    "co2GperKWh": 193.59,
    "co2MtPerYear": 90.176,
    "curtailmentTWh": 0,
    "exportTWh": 0.854,
    "hoursWithLoadShedding": 505,
    "importTWh": 88.386,
    "loadSheddingTWh": 2.826,
    "peakLoadGW": 75.64,
    "renewableSharePct": 58.76,
    "renewableTWh": 273.716,
    "securityStatus": "kritisch",
    "totalDemandTWh": 465.818,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 08-pv-dominant-with-lkw 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 19879.87,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 50.511,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 37.511,
  },
  "hour4000": {
    "batterieSocGWh": 25,
    "co2Tph": 4742.46,
    "curtailmentGW": 26.883,
    "exportGW": 25,
    "h2SocGWh": 0.1,
    "importGW": 0,
    "loadGW": 68.624,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 45,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 93.624,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 20860.95,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 64.605,
    "loadSheddingGW": 6.933,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 44.672,
  },
  "summary": {
    "co2GperKWh": 225.75,
    "co2MtPerYear": 120.803,
    "curtailmentTWh": 97.614,
    "exportTWh": 45.689,
    "hoursWithLoadShedding": 2378,
    "importTWh": 79.842,
    "loadSheddingTWh": 28.405,
    "peakLoadGW": 89.6,
    "renewableSharePct": 59.1,
    "renewableTWh": 316.276,
    "securityStatus": "kritisch",
    "totalDemandTWh": 535.118,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 09-heizung-only 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 13699.59,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 66.513,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 53.513,
  },
  "hour4000": {
    "batterieSocGWh": 4.556,
    "co2Tph": 9263.54,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 0,
    "loadGW": 56.757,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 7.116,
    "supplyGW": 49.641,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 35936.54,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 86.61,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 73.61,
  },
  "summary": {
    "co2GperKWh": 380.71,
    "co2MtPerYear": 232.717,
    "curtailmentTWh": 0,
    "exportTWh": 1.149,
    "hoursWithLoadShedding": 862,
    "importTWh": 93.38,
    "loadSheddingTWh": 10.601,
    "peakLoadGW": 131.58,
    "renewableSharePct": 44.78,
    "renewableTWh": 273.716,
    "securityStatus": "kritisch",
    "totalDemandTWh": 611.273,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 10-industrie-heavy 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 13999.37,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 141.52,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 128.52,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 45713.85,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 153.106,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 140.106,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 42076.55,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0.1,
    "importGW": 13,
    "loadGW": 146.837,
    "loadSheddingGW": 0,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 133.837,
  },
  "summary": {
    "co2GperKWh": 301.22,
    "co2MtPerYear": 392.285,
    "curtailmentTWh": 0.003,
    "exportTWh": 0.708,
    "hoursWithLoadShedding": 4947,
    "importTWh": 109.048,
    "loadSheddingTWh": 148.824,
    "peakLoadGW": 172.06,
    "renewableSharePct": 47.73,
    "renewableTWh": 621.602,
    "securityStatus": "kritisch",
    "totalDemandTWh": 1302.328,
  },
}
`;

exports[`simulation regression (10 diverse scenarios) > 11-h2-import-saves-strom 1`] = `
{
  "hour0": {
    "batterieSocGWh": 0,
    "co2Tph": 53800.17,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 151.539,
    "loadSheddingGW": 33.755,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 104.784,
  },
  "hour4000": {
    "batterieSocGWh": 0,
    "co2Tph": 54272.08,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 168.437,
    "loadSheddingGW": 53.124,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 102.313,
  },
  "hour8000": {
    "batterieSocGWh": 0,
    "co2Tph": 53682.55,
    "curtailmentGW": 0,
    "exportGW": 0,
    "h2SocGWh": 0,
    "importGW": 13,
    "loadGW": 176.911,
    "loadSheddingGW": 70.107,
    "pumpspeicherSocGWh": 0,
    "storageChargeGW": 0,
    "storageDischargeGW": 0,
    "supplyGW": 93.804,
  },
  "summary": {
    "co2GperKWh": 332.73,
    "co2MtPerYear": 471.315,
    "curtailmentTWh": 0,
    "exportTWh": 0,
    "hoursWithLoadShedding": 8760,
    "importTWh": 113.88,
    "loadSheddingTWh": 504.636,
    "peakLoadGW": 241.07,
    "renewableSharePct": 19.32,
    "renewableTWh": 273.716,
    "securityStatus": "kritisch",
    "totalDemandTWh": 1416.518,
  },
}
`;
